Fixing bugs and styles
Adds correct onclick action to contact me button and fixes styling
on items that were not responsive.

--- a/styles/base/base.css
+++ b/styles/base/base.css
@@ -62,11 +62,16 @@ nav ul li a {
 }
 
 #projects-section time {
+  font-size: 1.5vw;
   padding-right: 3vw;
 }
 
 #projects-section p {
   padding-bottom: 3vw;
+}
+
+#projects-section a {
+  font-size: 1.5vw;
 }
 
 .sub-banners {
@@ -89,14 +94,14 @@ nav ul li a {
 
 .featured-content {
   float: left;
-  margin-top: 3vw;
+  margin-top: 2vw;
   width: 95%;
 }
 
 .featured-content img {
   /*width: 100%;*/
   float: left;
-  /*margin-top: 3vw;*/
+  margin-top: 1vw;
   margin-right: 3vw;
 }
 
@@ -116,8 +121,9 @@ nav ul li a {
 }
 
 .featured-content button {
+  font-size: 1.5vw;
   border: none;
-  padding: 8px 18px;
+  padding: 1vw 2vw;
   background: #000;
   color: #fff;
   border-radius: 3px;
